added generateGrid() and custom scss variables

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Connect 4</title>
   </head>
   <body>
+    <main id="game-wrapper" class="game">
+      <section id="player-info" class="game__playerInfo"></section>
+      <section class="game__board grid"></section>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
