updated addToken() tokens can now be stacked

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <header class="header">
       <h1>Connect=>4</h1>
+      <h2 class="game-info"></h2>
     </header>
     <main id="game-wrapper" class="game">
       <section class="game__playerInfo">
