Updated styles/colours and added updatePlayerDisplay() to help players keep track of turns

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Connect 4</title>
   </head>
-  <body>
+  <body id="page">
     <header class="header">
       <h1>Connect=>4</h1>
       <h2 class="game-info"></h2>
