Added reset button styles and functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header class="header">
       <h1>Connect => 4</h1>
       <h2 class="game-info"></h2>
+      <button class="reset-button">Reset Game</button>
     </header>
     <main id="game-wrapper" class="game">
       <section class="game__playerInfo">
